--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "nodejs-mobile-react-native": "^18.17.8",
     "react": "18.2.0",
+    "react-checkmark": "^2.1.1",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
